--- a/package.json
+++ b/package.json
@@ -3,10 +3,25 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@types/cookie-parser": "^1.4.1",
+    "@types/cors": "^2.8.5",
+    "@types/express": "^4.17.0",
+    "@types/express-session": "^1.15.13",
     "@types/jest": "24.0.15",
+    "@types/morgan": "^1.7.35",
     "@types/node": "12.0.12",
+    "@types/passport": "^1.0.0",
+    "@types/passport-local": "^1.0.33",
     "@types/react": "16.8.23",
     "@types/react-dom": "16.8.4",
+    "axios": "^0.19.0",
+    "cookie-parser": "^1.4.4",
+    "cors": "^2.8.5",
+    "express": "^4.17.1",
+    "express-session": "^1.16.2",
+    "morgan": "^1.9.1",
+    "passport": "^0.4.0",
+    "passport-local": "^1.0.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-scripts": "3.0.1",
@@ -16,7 +31,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "serve": "nodemon"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -32,5 +48,11 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }
+  },
+  "devDependencies": {
+    "@types/axios": "^0.14.0",
+    "nodemon": "^1.19.1",
+    "ts-node": "^8.3.0"
+  },
+  "proxy": "http://localhost:8080"
 }
