--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,13 +10,13 @@
     "allowSyntheticDefaultImports": true,
     "strict": true,
     "forceConsistentCasingInFileNames": true,
-    "module": "commonjs",
+    "module": "esnext",
     "moduleResolution": "node",
     "sourceMap": true,
     "noImplicitAny": true,
     "resolveJsonModule": true,
     "isolatedModules": true,
-    "jsx": "react",
+    "jsx": "preserve",
     "lib": [
       "dom",
       "dom.iterable",
@@ -27,8 +27,16 @@
       "es2017.object",
       "es2018"
     ],
-    "typeRoots": ["node_modules/@types"]
+    "typeRoots": [
+      "node_modules/@types"
+    ],
+    "noEmit": true
   },
-  "include": ["client/**/*", "server/**/*"],
-  "exclude": ["node_modules"]
+  "include": [
+    "client/**/*",
+    "server/**/*"
+  ],
+  "exclude": [
+    "node_modules"
+  ]
 }
