--- a/package.json
+++ b/package.json
@@ -3,6 +3,30 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@types/enzyme": "^3.10.1",
+    "@types/html-webpack-plugin": "^3.2.0",
+    "@types/uglifyjs-webpack-plugin": "^1.1.0",
+    "axios": "^0.19.0",
+    "cookie-parser": "^1.4.4",
+    "cors": "^2.8.5",
+    "css-loader": "2.1.1",
+    "enzyme": "^3.10.0",
+    "express": "^4.17.1",
+    "express-session": "^1.16.2",
+    "html-webpack-plugin": "^3.2.0",
+    "jest": "24.7.1",
+    "morgan": "^1.9.1",
+    "passport": "^0.4.0",
+    "passport-local": "^1.0.0",
+    "react": "^16.8.6",
+    "react-dom": "^16.8.6",
+    "typescript": "3.5.2",
+    "uglifyjs-webpack-plugin": "^2.1.3",
+    "webpack": "4.29.6",
+    "webpack-dev-server": "3.2.1"
+  },
+  "devDependencies": {
+    "@types/axios": "^0.14.0",
     "@types/cookie-parser": "^1.4.1",
     "@types/cors": "^2.8.5",
     "@types/express": "^4.17.0",
@@ -14,25 +38,23 @@
     "@types/passport-local": "^1.0.33",
     "@types/react": "16.8.23",
     "@types/react-dom": "16.8.4",
-    "axios": "^0.19.0",
-    "cookie-parser": "^1.4.4",
-    "cors": "^2.8.5",
-    "express": "^4.17.1",
-    "express-session": "^1.16.2",
-    "morgan": "^1.9.1",
-    "passport": "^0.4.0",
-    "passport-local": "^1.0.0",
-    "react": "^16.8.6",
-    "react-dom": "^16.8.6",
-    "react-scripts": "3.0.1",
-    "typescript": "3.5.2"
+    "@typescript-eslint/eslint-plugin": "1.6.0",
+    "@typescript-eslint/parser": "1.6.0",
+    "eslint": "^5.16.0",
+    "eslint-plugin-react": "7.12.4",
+    "eslint-plugin-react-hooks": "^1.5.0",
+    "nodemon": "^1.19.1",
+    "ts-node": "^8.3.0"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "serve": "nodemon"
+    "test": "jest --env=node --colors --coverage test",
+    "prettier": "prettier --write \"client/**/*.{ts,tsx,css,md,json,js}\" --config .prettierrc",
+    "build": "ts-node ./scripts/build.ts NODE_ENV=\"production\"",
+    "lint": "tslint client/*.ts{,x} src/**/*.ts{,x}",
+    "dev": "NODE_ENV=\"development\" ts-node ./scripts/dev.ts",
+    "prettier-watch": "onchange '**/*.ts' -- prettier --write {{changed}}",
+    "dev:back": "nodemon",
+    "nuke": "rm -r node_modules/"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -49,10 +71,57 @@
       "last 1 safari version"
     ]
   },
-  "devDependencies": {
-    "@types/axios": "^0.14.0",
-    "nodemon": "^1.19.1",
-    "ts-node": "^8.3.0"
+  "proxy": "http://localhost:8080",
+  "jest": {
+    "collectCoverageFrom": [
+      "src/**/*.{js,jsx,ts,tsx}",
+      "!src/**/*.d.ts"
+    ],
+    "setupFiles": [
+      "react-app-polyfill/jsdom"
+    ],
+    "setupFilesAfterEnv": [],
+    "testMatch": [
+      "<rootDir>/src/**/__tests__/**/*.{js,jsx,ts,tsx}",
+      "<rootDir>/src/**/*.{spec,test}.{js,jsx,ts,tsx}"
+    ],
+    "testEnvironment": "jest-environment-jsdom-fourteen",
+    "transform": {
+      "^.+\\.(js|jsx|ts|tsx)$": "<rootDir>/node_modules/babel-jest",
+      "^.+\\.css$": "<rootDir>/config/jest/cssTransform.js",
+      "^(?!.*\\.(js|jsx|ts|tsx|css|json)$)": "<rootDir>/config/jest/fileTransform.js"
+    },
+    "transformIgnorePatterns": [
+      "[/\\\\]node_modules[/\\\\].+\\.(js|jsx|ts|tsx)$",
+      "^.+\\.module\\.(css|sass|scss)$"
+    ],
+    "modulePaths": [
+      "/Users/williamcory/Projects/spark/.buildenv/lib/node_modules"
+    ],
+    "moduleNameMapper": {
+      "^react-native$": "react-native-web",
+      "^.+\\.module\\.(css|sass|scss)$": "identity-obj-proxy"
+    },
+    "moduleFileExtensions": [
+      "web.js",
+      "js",
+      "web.ts",
+      "ts",
+      "web.tsx",
+      "tsx",
+      "json",
+      "web.jsx",
+      "jsx",
+      "node"
+    ],
+    "watchPlugins": [
+      "jest-watch-typeahead/filename",
+      "jest-watch-typeahead/testname"
+    ]
   },
-  "proxy": "http://localhost:8080"
+  "babel": {
+    "presets": [
+      "react-app"
+    ]
+  }
 }
