--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
   "name": "nbapipe",
   "version": "0.1.0",
-  "private": true,
   "dependencies": {
     "@types/enzyme": "^3.10.1",
+    "@types/enzyme-adapter-react-16": "^1.0.5",
     "@types/html-webpack-plugin": "^3.2.0",
     "@types/uglifyjs-webpack-plugin": "^1.1.0",
     "axios": "^0.19.0",
@@ -11,15 +11,20 @@
     "cors": "^2.8.5",
     "css-loader": "2.1.1",
     "enzyme": "^3.10.0",
+    "enzyme-to-json": "^3.3.5",
     "express": "^4.17.1",
     "express-session": "^1.16.2",
     "html-webpack-plugin": "^3.2.0",
     "jest": "24.7.1",
+    "jest-watch-typeahead": "^0.3.1",
+    "jsdom": "^15.1.1",
+    "jsdom-global": "^3.0.2",
     "morgan": "^1.9.1",
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
+    "ts-jest": "^24.0.2",
     "typescript": "3.5.2",
     "uglifyjs-webpack-plugin": "^2.1.3",
     "webpack": "4.29.6",
@@ -40,6 +45,7 @@
     "@types/react-dom": "16.8.4",
     "@typescript-eslint/eslint-plugin": "1.6.0",
     "@typescript-eslint/parser": "1.6.0",
+    "enzyme-adapter-react-16": "^1.14.0",
     "eslint": "^5.16.0",
     "eslint-plugin-react": "7.12.4",
     "eslint-plugin-react-hooks": "^1.5.0",
@@ -48,16 +54,11 @@
   },
   "scripts": {
     "test": "jest --env=node --colors --coverage test",
-    "prettier": "prettier --write \"client/**/*.{ts,tsx,css,md,json,js}\" --config .prettierrc",
-    "build": "ts-node ./scripts/build.ts NODE_ENV=\"production\"",
-    "lint": "tslint client/*.ts{,x} src/**/*.ts{,x}",
-    "dev": "NODE_ENV=\"development\" ts-node ./scripts/dev.ts",
+    "prettier": "prettier --write \"src/**/*.{ts,tsx,css,md,json,js}\" --config .prettierrc",
     "prettier-watch": "onchange '**/*.ts' -- prettier --write {{changed}}",
+    "dev:front": "NODE_ENV=\"development\" ts-node ./scripts/dev.ts",
     "dev:back": "nodemon",
     "nuke": "rm -r node_modules/"
-  },
-  "eslintConfig": {
-    "extends": "react-app"
   },
   "browserslist": {
     "production": [
@@ -69,59 +70,6 @@
       "last 1 chrome version",
       "last 1 firefox version",
       "last 1 safari version"
-    ]
-  },
-  "proxy": "http://localhost:8080",
-  "jest": {
-    "collectCoverageFrom": [
-      "src/**/*.{js,jsx,ts,tsx}",
-      "!src/**/*.d.ts"
-    ],
-    "setupFiles": [
-      "react-app-polyfill/jsdom"
-    ],
-    "setupFilesAfterEnv": [],
-    "testMatch": [
-      "<rootDir>/src/**/__tests__/**/*.{js,jsx,ts,tsx}",
-      "<rootDir>/src/**/*.{spec,test}.{js,jsx,ts,tsx}"
-    ],
-    "testEnvironment": "jest-environment-jsdom-fourteen",
-    "transform": {
-      "^.+\\.(js|jsx|ts|tsx)$": "<rootDir>/node_modules/babel-jest",
-      "^.+\\.css$": "<rootDir>/config/jest/cssTransform.js",
-      "^(?!.*\\.(js|jsx|ts|tsx|css|json)$)": "<rootDir>/config/jest/fileTransform.js"
-    },
-    "transformIgnorePatterns": [
-      "[/\\\\]node_modules[/\\\\].+\\.(js|jsx|ts|tsx)$",
-      "^.+\\.module\\.(css|sass|scss)$"
-    ],
-    "modulePaths": [
-      "/Users/williamcory/Projects/spark/.buildenv/lib/node_modules"
-    ],
-    "moduleNameMapper": {
-      "^react-native$": "react-native-web",
-      "^.+\\.module\\.(css|sass|scss)$": "identity-obj-proxy"
-    },
-    "moduleFileExtensions": [
-      "web.js",
-      "js",
-      "web.ts",
-      "ts",
-      "web.tsx",
-      "tsx",
-      "json",
-      "web.jsx",
-      "jsx",
-      "node"
-    ],
-    "watchPlugins": [
-      "jest-watch-typeahead/filename",
-      "jest-watch-typeahead/testname"
-    ]
-  },
-  "babel": {
-    "presets": [
-      "react-app"
     ]
   }
 }
