--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,6 @@
 {
   "compilerOptions": {
-    "target": "es5",
+    "target": "es6",
     "downlevelIteration": true,
     "allowJs": true,
     "noImplicitReturns": true,
@@ -16,17 +16,8 @@
     "noImplicitAny": true,
     "resolveJsonModule": true,
     "isolatedModules": true,
-    "jsx": "preserve",
-    "lib": [
-      "dom",
-      "dom.iterable",
-      "es2015",
-      "es2015.iterable",
-      "es2016",
-      "es2017",
-      "es2017.object",
-      "es2018"
-    ],
+    "jsx": "react",
+    "lib": ["dom", "dom.iterable", "esnext"],
     "typeRoots": ["node_modules/@types"],
     "noEmit": true
   },
