--- a/package.json
+++ b/package.json
@@ -50,10 +50,13 @@
     "eslint-plugin-react": "7.12.4",
     "eslint-plugin-react-hooks": "^1.5.0",
     "nodemon": "^1.19.1",
-    "ts-node": "^8.3.0"
+    "ts-loader": "^6.0.4",
+    "ts-node": "^8.3.0",
+    "webpack-cli": "^3.3.5"
   },
   "scripts": {
     "test": "jest --env=node --colors --coverage test",
+    "build": "ts-node ./scripts/build.ts NODE_ENV=\"production\"",
     "prettier": "prettier --write \"src/**/*.{ts,tsx,css,md,json,js}\" --config .prettierrc",
     "prettier-watch": "onchange '**/*.ts' -- prettier --write {{changed}}",
     "dev:front": "NODE_ENV=\"development\" ts-node ./scripts/dev.ts",
