--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,8 +18,8 @@
     "isolatedModules": true,
     "jsx": "react",
     "lib": ["dom", "dom.iterable", "esnext"],
-    "typeRoots": ["node_modules/@types"],
-    "noEmit": true
+    "typeRoots": ["node_modules/@types"]
   },
-  "exclude": ["node_modules"]
+  "exclude": ["node_modules"],
+  "include": ["src/**/*", "webpack.ts"]
 }
