--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "jsdom": "^15.1.1",
     "jsdom-global": "^3.0.2",
     "morgan": "^1.9.1",
+    "mysql": "^2.17.1",
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
     "react": "^16.8.6",
