--- a/package.json
+++ b/package.json
@@ -2,11 +2,16 @@
   "name": "nbapipe",
   "version": "0.1.0",
   "dependencies": {
+    "@types/classnames": "^2.2.9",
     "@types/enzyme": "^3.10.1",
     "@types/enzyme-adapter-react-16": "^1.0.5",
     "@types/html-webpack-plugin": "^3.2.0",
+    "@types/react-redux": "^7.1.1",
+    "@types/react-router-dom": "^4.3.4",
+    "@types/redux": "^3.6.0",
     "@types/uglifyjs-webpack-plugin": "^1.1.0",
     "axios": "^0.19.0",
+    "classnames": "^2.2.6",
     "cookie-parser": "^1.4.4",
     "cors": "^2.8.5",
     "css-loader": "2.1.1",
@@ -25,8 +30,12 @@
     "passport-local": "^1.0.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
+    "react-redux": "^7.1.0",
+    "react-router-dom": "^5.0.1",
+    "redux": "^4.0.4",
     "ts-jest": "^24.0.2",
     "typescript": "3.5.2",
+    "typescript-fsa": "^3.0.0-beta-2",
     "uglifyjs-webpack-plugin": "^2.1.3",
     "webpack": "4.29.6",
     "webpack-dev-server": "3.2.1"
